--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body { padding-top: 70px; }
 .todo-completed{
     font-style: italic;
-    text-decoration: line-through;
+    color: #ccc;
 }
 .todo-container{
     overflow: auto;
